objects/SBQQ__ProcessInputValue__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProcessInputHelp</customHelpPage>
    <description>Stores answers to Quote Process Inputs on the Quote level.</description>
    <fields>
        <fullName>SBQQ__ProcessInputID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the Process Input that the object belongs to.</description>
        <inlineHelpText>Choose the Process Input that the object belongs to.</inlineHelpText>
        <label>Process Input ID</label>
        <referenceTo>SBQQ__ProcessInput__c</referenceTo>
        <relationshipLabel>Process Input Values</relationshipLabel>
        <relationshipName>Process_Input_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Id of the Quote that this Process Input Value belongs to.</description>
        <inlineHelpText>The Id of the Quote that this Process Input Value belongs to.</inlineHelpText>
        <label>Quote ID</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>Process_Input_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Process Input value belongs to the user.</description>
        <inlineHelpText>This Process Input value belongs to the user.</inlineHelpText>
        <label>UserID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Input_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>This is the answer to the input process value.</description>
        <inlineHelpText>This is the answer to the input process value.</inlineHelpText>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Process Input Values</label>
    <nameField>
        <label>Quote Process Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Input Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>